# racer-thing

./: README.md
src/: CMakeLists.txt
src/Assets/Art/Trees/: LICENSE
src/Main/: Assets.cpp  Assets.hpp  Main.cpp  Main.hpp
src/Main/Entities/: Building.cpp  Building.hpp  Camera.cpp  Camera.hpp  Tree.cpp  Tree.hpp
src/Main/Entities/Cars/: Ambulance.cpp  Ambulance.hpp  Car.cpp  Car.hpp  NPC.cpp  NPC.hpp  OnRoad.cpp  OnRoad.hpp  Player.cpp  Player.hpp  Police.cpp  Police.hpp  SkidMark.cpp  SkidMark.hpp
src/Main/GameStates/: Game.cpp  Game.hpp  GameState.cpp  GameState.hpp
src/Main/Tiles/: Tile.cpp  Tile.hpp
src/Main/Util/: ArrayList.hpp  ArrayListImp.hpp  Constants.cpp  Constants.hpp  ExtraMath.cpp  ExtraMath.hpp  Instanceof.hpp  Point.cpp  Point.hpp
src/Main/Util/Animations/: AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp
src/Main/Util/Collisions/: TransformedBoundingBox.cpp  TransformedBoundingBox.hpp
